CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.4

	- The PostScript filter generated N^2 copies when the
	  printer supported collated copies and user requested
	  reverse-order output.
	- The scheduler did not reprint all of the files in a
	  job that was held.
	- The scheduler did not update the printcap file after
	  removing stale remote queues.
	- The cupsd.conf man page incorrectly referenced
	  "AuthType Kerberos" instead of "AuthType Negotiate".


CHANGES IN CUPS V1.3.3

	- The scheduler did not use the attributes-natural-language
	  attribute when passing the LANG environment variable to
	  cups-deviced or cups-driverd.
	- The scheduler did not use the printer-op-policy when
	  modifying classes or printers (STR #2525)
	- The auth-info-required attribute was not always updated
	  for remote queues that required authentication.
	- The German web interface localization contained errors
	  (STR #2523)
	- The Swedish localization contained errors (STR #2522)


CHANGES IN CUPS V1.3.2

	- The 1.3.1 release was incorrectly created from the
	  1.4.x source tree (STR #2519)
	- Added support for 32/64-bit libraries on HP-UX
	  (STR #2520)
	- The scheduler incorrectly used portrait as the default
	  orientation (STR #2513)
	- The scheduler no longer writes the printcap file for
	  every remote printer update (STR #2512)
	- Remote raw printing with multiple copies did not work
	  (STR #2518)
	- Updated the configure script to require at least autoconf
	  2.60 (STR #2515)
	- Some gzip'd PPD files were not read in their entirety
	  (STR #2510)


CHANGES IN CUPS V1.3.1

	- Documentation updates.
	- The USB backend on Mac OS X could hang if the driver and
          printer did not match.
	- Delegated Kerberos credentials were not working.
	- "make distclean" incorrectly removed the edit-config.tmpl
	  files (STR #2508)
	- Fix compile problem on HP-UX (STR #2501)
	- The cupstestppd utility now tests for resolutions greater